make mod not require java 9 hopefully